# starshuffler

./: .gitignore  Cargo.toml  build.rs  compile-circuit.sh  deploy.sh  package-lock.json  package.json  schema.rs
artifacts/: checksums.txt  juno_privacy_mixer.wasm
circuit/: build.sh  circuit.circom  init.sh  mixer.circom  package-lock.json  package.json  setup.sh  setup.ts  test_mixer.ts  tsconfig.json  verification_key_converted.json  verifier.sol
circuit/circuits/: merkleproof.circom
circuit/relayer/: package-lock.json  package.json
circuit/scripts/: convert-vkey.js
circuits/: merkleproof.circom
frontend/: config.js  package-lock.json  package.json
frontend/.github/workflows/: deploy.yml
frontend/.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
frontend/.next/server/: _error.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js
frontend/components/: PoseidonProvider.js  WalletConnect.js
frontend/components/mixer/: Deposit.js  Withdraw.js
frontend/config/: index.js
frontend/hooks/: usePoseidon.js
frontend/pages/: _app.js  index.js
frontend/public/mixer/: verification_key.json
frontend/src/: config.ts  types.ts
frontend/src/hooks/: useMixer.ts  (+1 more)
frontend/utils/: merkleTree.js  zkProof.js
relayer/: Dockerfile  package-lock.json  package.json  server.js
relayer/config/: production.ts
relayer/src/: index.ts
relayer/verification_key/: verification_key.json
scripts/: convert-vk.js  copy-circuit-files.js  deploy-checklist.sh  deploy-contract.ts  fix-verification-key.ts  sync-verification-key.ts
src/: config.rs  contract.rs  crypto.rs  error.rs  lib.rs  merkle.rs  merkle_store.rs  msg.rs  state.rs  test.rs  zk_snark.rs
src/circuit/: compile.rs  mod.rs
src/verification_key/: verification_key.json
tools/: cli.rs  convert_verification_key.rs  note_generator.rs
(+134 files in other folders)
