[package]
name = "juno-privacy-mixer"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A privacy-preserving mixer contract for the JUNO blockchain"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.1.0"
cosmwasm-std = { version = "1.1.0", features = ["staking"] }
cosmwasm-storage = "1.1.0"
cw-storage-plus = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
cw2 = "1.0.1"
hex = "0.4"
sha2 = "0.10"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
ark-serialize = "0.4.0"
ark-ec = "0.4.0"
ark-groth16 = "0.4.0"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
cw-multi-test = "0.16.2" 