[package]
name = "juno-privacy-mixer"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A privacy-preserving mixer contract for the JUNO blockchain"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.10", default-features = false }
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.2.0"
schemars = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
cw2 = "1.1.2"
hex = "0.4"
sha2 = { version = "0.10", default-features = false }
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-ec = "0.4"
ark-groth16 = "0.4"
rand = { version = "0.8", default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }
serde_json = "1.0"
base64 = "0.21"
poseidon-bn128 = "0.1.1"

[dev-dependencies]
